[ADD_TAILWIND => package.json + config] + [FORMAT_CODE => remove bootstrap, class redundant] (WORKS)

--- a/AppWeb.Client/_Imports.razor
+++ b/AppWeb.Client/_Imports.razor
@@ -6,6 +6,7 @@
 @using System.Net.Http.Json
 @using Microsoft.JSInterop
 @using System.Net.Http
-@using AppWeb.Client
 
+@using AppWeb.Client.Components
 @using AppWeb.Shared.Dtos
+@using AppWeb.Client
