--- a/AppWeb.Client/Pages/Users.razor
+++ b/AppWeb.Client/Pages/Users.razor
@@ -10,23 +10,20 @@ else if (users.Count == 0)
 { <p>No users found.</p> }
 else
 {
-    <table class="table">
-        <thead>
+    <DataTable Items="users" EmptyText="No users found.">
+        <HeaderContent>
             <tr>
                 <th>Id</th>
                 <th>Username</th>
                 <th>Email</th>
             </tr>
-        </thead>
-        <tbody>
-            @foreach (var user in users)
-            {
-                <tr>
-                    <td>@user.Id</td>
-                    <td>@user.Username</td>
-                    <td>@user.Email</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+        </HeaderContent>
+        <RowTemplate Context="user">
+            <tr>
+                <td>@user.Id</td>
+                <td>@user.Username</td>
+                <td>@user.Email</td>
+            </tr>
+        </RowTemplate>
+    </DataTable>
 }
