--- a/AppWeb.Client/Routes.razor
+++ b/AppWeb.Client/Routes.razor
@@ -1,4 +1,4 @@
-@using AppWeb.Client.Components.Layout;
+@using AppWeb.Client.Layout;
 
 <Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
     <Found Context="routeData">
