--- a/AppWeb.Client/_Imports.razor
+++ b/AppWeb.Client/_Imports.razor
@@ -5,7 +5,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using System.Net.Http.Json
 @using Microsoft.JSInterop
+@using MudBlazor.Components
 @using System.Net.Http
+@using MudBlazor
 
 @using AppWeb.Client.Components
 @using AppWeb.Shared.Dtos
