--- a/AppWeb/Components/App.razor
+++ b/AppWeb/Components/App.razor
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="@Assets["AppWeb.styles.css"]" />
+        <link rel="stylesheet" href="css/app.css" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="@Assets["AppWeb.styles.css"]" />
-    <link rel="stylesheet" href="css/app.css" />
-    <base href="/" />
-    <ImportMap />
-    <HeadOutlet />
-</head>
+        <!-- MudBlazor components CSS & fonts -->
+        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 
-<body>
-    <Routes />
-    <script src="_framework/blazor.web.js"></script>
-</body>
+        <base href="/" />
+        <ImportMap />
+        <HeadOutlet />
+        @code { private static readonly InteractiveWebAssemblyRenderMode WebAssemblyNoPrerender = new(prerender: false); }
+    </head>
 
+    <body>
+        <Routes @rendermode="WebAssemblyNoPrerender" />
+        <script src="_framework/blazor.web.js"></script>
+        <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    </body>
 </html>
