--- a/AppWeb/Components/_Imports.razor
+++ b/AppWeb/Components/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Forms
