--- a/AppWeb.Client/_Imports.razor
+++ b/AppWeb.Client/_Imports.razor
@@ -9,6 +9,6 @@
 @using System.Net.Http
 @using MudBlazor
 
-@using AppWeb.Client.Components
+@using AppWeb.Client.Features.Users.Components
 @using AppWeb.Shared.Dtos
 @using AppWeb.Client
