--- a/AppWeb.Client/Features/Users/Components/TableUser.razor
+++ b/AppWeb.Client/Features/Users/Components/TableUser.razor
@@ -7,6 +7,7 @@
         <ToolBarContent>
             <MudText Typo="Typo.subtitle2">@($"Users ({FilteredUsers.Count()})")</MudText>
             <MudSpacer />
+            <!-- Button create user (Form) -->
             <MudButton Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Add" OnClick="OnAddClicked">Add</MudButton>
         </ToolBarContent>
         <HeaderContent>
