--- a/AppWeb/Components/App.razor
+++ b/AppWeb/Components/App.razor
@@ -3,22 +3,19 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="@Assets["AppWeb.styles.css"]" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <link rel="stylesheet" href=@Assets["_content/MudBlazor/MudBlazor.min.css"] />
+        <link rel="icon" href="favicon.ico" type="image/ico" />
         <link rel="stylesheet" href="css/app.css" />
-
-        <!-- MudBlazor components CSS & fonts -->
-        <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-
         <base href="/" />
         <ImportMap />
-        <HeadOutlet />
+        <HeadOutlet @rendermode="InteractiveWebAssembly" />
         @code { private static readonly InteractiveWebAssemblyRenderMode WebAssemblyNoPrerender = new(prerender: false); }
     </head>
 
     <body>
         <Routes @rendermode="WebAssemblyNoPrerender" />
         <script src="_framework/blazor.web.js"></script>
-        <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+        <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
     </body>
 </html>
