--- a/AppWeb/Components/_Imports.razor
+++ b/AppWeb/Components/_Imports.razor
@@ -7,6 +7,8 @@
 @using Microsoft.JSInterop
 @using System.Net.Http
 
+@using MudBlazor.Services
 @using AppWeb.Components
 @using AppWeb.Client
+@using MudBlazor
 @using AppWeb
