[ADD => environment variables (local)] + [FORMAT => form and table user]

--- a/AppWeb.Client/Features/Users/Pages/TableUserPage.razor
+++ b/AppWeb.Client/Features/Users/Pages/TableUserPage.razor
@@ -1,6 +1,6 @@
 @page "/users"
 
-@inject AppWeb.Client.Features.Users.ViewModels.UsersPageViewModel vm
+@inject AppWeb.Client.Features.Users.ViewModels.TableUserPageVM vm
 @using AppWeb.Client.Features.Users.Components
 @using AppWeb.Client.Shared.Ui
 
