--- a/AppWeb.Client/Features/Users/Components/PreviewUser.razor
+++ b/AppWeb.Client/Features/Users/Components/PreviewUser.razor
@@ -1,7 +1,7 @@
 @using AppWeb.Shared.Dtos
 @using MudBlazor
 
-<MudDialogContent Class="pa-4 min-width-300">
+<div class="pa-4 min-width-300">
     <MudText Typo="Typo.h6" Class="mb-2">User Details</MudText>
 
     @if (Existing is not null)
@@ -15,10 +15,10 @@
         </MudList>
     }
 
-    <MudDialogActions Class="mt-4">
+    <div class="mt-4">
         <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="Close">Close</MudButton>
-    </MudDialogActions>
-</MudDialogContent>
+    </div>
+</div>
 
 @code {
     [Parameter, EditorRequired] public UserResultDto Existing { get; set; } = default!;
